# scout

./: .gitignore  CMakeLists.txt
cmake/: link_dependencies.cmake  macros.cmake
projects/: CMakeLists.txt
projects/alpha/: CMakeLists.txt  alpha1.cpp  alpha2.cpp  alpha3.cpp  alpha4.cpp  alpha5.cpp
projects/alpha/alpha2/: game.cpp  game.h
projects/alpha/alpha3/: game.cpp  game.h
projects/alpha/alpha4/: game.cpp  game.h
projects/alpha/alpha5/: game.cpp  game.h
projects/examples/: CMakeLists.txt  imgui_example.cpp  libuv_example.cpp  libuv_example2.cpp  nanogui_example.cpp  nanovg_example.cpp  person.proto
projects/examples/person/: person.pb.cc  person.pb.h
projects/helloworld/: CMakeLists.txt  main.cpp
projects/renderer/: CMakeLists.txt
projects/renderer/renderer1/: main.cpp  renderer1.h  renderer_math.h
src/: CMakeLists.txt
src/core/math/: bbox.h
tools/PacketSenderPortable_v7.2.3/PacketSenderPortable/: packets.ini  ps_settings.ini
